@@ -2058,6 +2058,8 @@ pm-legacy-code=Legacy code
 [achievement-description]
 pm-use-more-gun=Use your first combat bot.
 pm-legacy-code=Research a technology using noble gas science packs without unlocking processing units.
+no-time-for-chitchat=Launch a rocket within 150 hours.
+there-is-no-spoon=Launch a rocket within 100 hours.
 
 [fuel-category-name]
 pm-oxidiser=Oxidiser
