@@ -26,6 +26,7 @@ Date: 2025-28-09
     - Changed rocket fuel to have a stack size of 100.
     - Moved rocket control units into their correct subgroup.
     - Seperated circuit recipes into circuits (green, orange, red) and processing units (blue, purple, grey).
+    - Changed "There is no spoon" and "No time for chitchat" to be actually doable in PM, and let them be doable by changing world settings
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.7.000
